# ripe_fitness

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: activities.py  auth.py  availability.py  events.py  plan.py  profile.py
backend/app/services/: coach.py  garmin_sync.py  metrics.py  readiness.py  scheduler.py
backend/scripts/: garmin_bootstrap.py
frontend/: .env.example  Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: ReadinessCard.tsx  TrainingVolume.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Progress.tsx  Setup.tsx  Today.tsx
