[project]
name = "ripe-fitness-backend"
version = "0.1.0"
description = "AI fitness coach backend (Garmin + Claude) for run/bike/gym training"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "garminconnect>=0.2.20",
    "psycopg[binary]>=3.1",
    "apscheduler>=3.10",
]

[tool.uv]
package = false
